lambda/tests/compile-fail/no-args.rs
use lambda::lambda;

#[lambda]
#[tokio::main]
async fn main() {}
