lambda/tests/compile-fail/no-args.stderr
error: The #[lambda] macro can accept one or two arguments.
 --> $DIR/no-args.rs:3:1
  |
3 | #[lambda]
  | ^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/no-args.rs:1:1
  |
1 | / use lambda::lambda;
2 | |
3 | | #[lambda]
4 | | #[tokio::main]
5 | | async fn main() {}
  | |__________________^ consider adding a `main` function to `$DIR/tests/compile-fail/no-args.rs`

For more information about this error, try `rustc --explain E0601`.
error: could not compile `lambda-tests`.